--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
       "destination": "/dist/index.js"
     },
     {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "source": "/(.*\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
       "destination": "/dist/public/$1"
     },
     {
@@ -38,7 +38,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css))",
+      "source": "/(.*\.(js|css))",
       "headers": [
         {
           "key": "Cache-Control",
