--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,16 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css))",
+      "source": "/:path*.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    },
+    {
+      "source": "/:path*.css",
       "headers": [
         {
           "key": "Cache-Control",
